config/samples/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ingress
  namespace: default
spec:
  ingressClassName: go-ingress
  rules:
    - host: ingress.frantj.cc
      http:
        paths:
        - backend:
            resource:
              apiGroup: backend.ingress.frantj.cc
              kind: Redirect
              name: google
          path: /
          pathType: Prefix
